# leetcode

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt
arrays-hashing/: README.md  p0001_two_sum.md  p0001_two_sum.py  p0036_valid_sudoku.md  p0036_valid_sudoku.py  p0041_first_missing_positive.md  p0041_first_missing_positive.py  p0049_group_anagrams.md  p0049_group_anagrams.py  p0121_best_time_to_buy_and_sell_stock.md  p0121_best_time_to_buy_and_sell_stock.py  p0122_best_time_to_buy_and_sell_stock_ii.md  p0122_best_time_to_buy_and_sell_stock_ii.py  p0128_longest_consecutive_sequence.md  p0128_longest_consecutive_sequence.py  p0169_majority_element.md  p0169_majority_element.py  p0217_contains_duplicate.md  p0217_contains_duplicate.py  p0242_valid_anagram.md  p0242_valid_anagram.py  p0705_design_hashset.md  p0705_design_hashset.py  p0706_design_hashmap.md  p0706_design_hashmap.py  p1929_concatenation_of_array.py
backtracking/: README.md
binary-search/: README.md  p0033_search_in_rotated_sorted_array.md  p0033_search_in_rotated_sorted_array.py  p0035_search_insert_position.md  p0035_search_insert_position.py  p0069_sqrtx.md  p0069_sqrtx.py  p0074_search_a_2d_matrix.md  p0074_search_a_2d_matrix.py  p0081_search_in_rotated_sorted_array_ii.md  p0081_search_in_rotated_sorted_array_ii.py  p0153_find_minimum_in_rotated_sorted_array.md  p0153_find_minimum_in_rotated_sorted_array.py  p0374_guess_number_higher_or_lower.md  p0374_guess_number_higher_or_lower.py  p0875_koko_eating_bananas.md  p0875_koko_eating_bananas.py  p0981_time_based_key_value_store.md  (+3 more)
(+185 files in other folders)
