[project]
name = "leetcode-python"
version = "0.1.0"
description = "Python solutions, tests, and notes for LeetCode practice."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

